# deletee_auxiliar_pymtech_core

./: README.md  pyproject.toml
src/pymtech_core/: settings.py
src/tests/: conftest.py  test_settings.py
